--- a/jenkinsfile
+++ b/jenkinsfile
@@ -124,7 +124,7 @@ pipeline {
                      alwaysLinkToLastBuild: false,
                      keepAll: true,
                      reportDir: '.',
-                     reportFiles: 'report.html',
+                     reportFiles: 'latest.html',
                      reportName: 'MyReports',
                      reportTitles: 'TheReport'])
             }
